<resources>
    <string name="app_name">BarronData</string>

    <!--EditText Hint-->
    <string name="user_id">User ID</string>
    <string name="password">Password</string>

    <!--Button Text-->
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="retrieve_password">Retrieve Password</string>
    <string name="set_password">Set Password</string>

    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="assigned_to_me">Assigned to me</string>
    <string name="specific">Specific</string>
    <string name="completed">Completed</string>
    <string name="saved">Saved</string>

    <string name="sort">Sort</string>
    <string name="none">None</string>
    <string name="due_date">Due Date</string>
    <string name="job_type">Job Type</string>
    <string name="priority">Priority</string>
    <string name="criticality">Criticality</string>

    <!--Details-->
    <string name="colon">:&#160;</string>
    <string name="work_order_details">Work Order Details</string>
    <string name="work_order_number">Work Order Number</string>
    <string name="work_order_title">Work Order Title</string>

</resources>
