<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_sort"
        android:orderInCategory="1"
        android:title="@string/sort"
        app:showAsAction="ifRoom" >

        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/menu_sort_none"
                    android:checked="true"
                    android:title="@string/none" />

                <item
                    android:id="@+id/menu_sort_due_date"
                    android:checked="false"
                    android:title="@string/due_date" />

                <item
                    android:id="@+id/menu_sort_job_type"
                    android:checked="false"
                    android:title="@string/job_type" />

                <item
                    android:id="@+id/menu_sort_priority"
                    android:checked="false"
                    android:title="@string/priority" />

                <item
                    android:id="@+id/menu_sort_criticality"
                    android:checked="false"
                    android:title="@string/criticality" />
            </group>
        </menu>
    </item>

    <item
        android:icon="@drawable/ic_filter"
        android:orderInCategory="2"
        android:title="@string/filter"
        app:showAsAction="ifRoom" >

        <menu>
            <group
                android:id="@+id/menu_filter_1"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/menu_filter_all"
                    android:checked="false"
                    android:title="@string/all" />

                <item
                    android:id="@+id/menu_filter_assigned"
                    android:checked="true"
                    android:title="@string/assigned_to_me" />

            </group>

            <group
                android:id="@+id/menu_filter_2"
                android:checkableBehavior="all">

                <item
                    android:id="@+id/menu_filter_specific"
                    android:checked="false"
                    android:title="@string/specific" />

                <item
                    android:id="@+id/menu_filter_completed"
                    android:checked="false"
                    android:title="@string/completed" />

                <item
                    android:id="@+id/menu_filter_saved"
                    android:checked="false"
                    android:title="@string/saved" />

            </group>

        </menu>

    </item>

</menu>