<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img_login_bg"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTransparentBlack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_48"
                    android:layout_centerInParent="true"
                    android:src="@drawable/img_logo"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:padding="@dimen/size_16"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_08"
                    android:background="@drawable/border"
                    android:maxLines="1"
                    android:inputType="text"
                    android:hint="@string/user_id"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="@dimen/font_size_normal" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_32" />

                <Button
                    android:id="@+id/btn_retrieve_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/retrieve_password"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_size_normal"
                    android:theme="@style/RaisedButtonStyle" />

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>



</RelativeLayout>
